--- a/index.html
+++ b/index.html
@@ -4,16 +4,8 @@
     <!-- Mobile Compatability -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Joshua Blackstone : Application Developer</title>
-    <meta property="og:title" content="JoshuaBlackstone.Com" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://www.joshuablackstone.com" />
-    <meta property="og:image" content="http://www.joshuablackstone.com/Images/Me.bmp" />
-    <meta property="og:site_name" content="JoshuaBlackstone.Com" />
-    <meta property="og:description" content="" />
-    <meta name="keywords" content="ASP.NET,JQuery,C#,VB,Javascript,SQL,Webservices" />
-    <meta name="description" content="" />
-    <link rel="shortcut icon" href="/Images/JGB.ico" />
+    <title>GHBRentals : Rental Properties in Terre Haute Indiana</title>
+    <meta name="keywords" content="Terre Haute, Properties, Rental" />
     <link href="/Content/bootstrap.min.css" rel="stylesheet" />
     <link href="/Content/toastr.min.css" rel="stylesheet" />
     <link href="/Content/Site.css" rel="stylesheet" />
@@ -42,9 +34,6 @@
                             <li><a target="_blank" href="http://www.facebook.com/#!/profile.php?id=1494471743">Facebook</a></li>
                             <li><a target="_blank" href="http://twitter.com/#!/jblackstone6975">Twitter</a></li>
                         </ul>
-                    </li>
-                    <li>
-                        <a href="/Documents/Resume.pdf" target="_blank"><span class="glyphicon glyphicon-download"></span>&nbsp;Resume</a>
                     </li>
                 </ul>
             </div>
