--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="/Content/Site.css" rel="stylesheet" />
 </head>
 <body>
-    <div class="navbar navbar-default navbar-fixed-top">
+    <!--<div class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
@@ -22,160 +22,29 @@
             </div>
             <div class="navbar-collapse collapse" id="navbar-main">
                 <ul id="menu" class="nav navbar-nav">
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            Social
-                            Media <b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a target="_blank" href="http://jblackstone.blogspot.com">Blogger</a></li>
-                            <li><a target="_blank" href="http://www.flickr.com/photos/jblackstone">Flickr</a></li>
-                            <li><a target="_blank" href="http://www.linkedin.com/profile/view?id=65688934">LinkedIn</a></li>
-                            <li><a target="_blank" href="http://www.facebook.com/#!/profile.php?id=1494471743">Facebook</a></li>
-                            <li><a target="_blank" href="http://twitter.com/#!/jblackstone6975">Twitter</a></li>
-                        </ul>
-                    </li>
                 </ul>
             </div>
         </div>
-    </div>
+    </div>-->
     <div class="container body-content">
         <div class="jumbotron">
-            <img src="Images/Me.bmp" class="img-responsive" />
             <h1>
-                Joshua Blackstone
+                GHB Rentals
             </h1>
             <p>
-                Application Developer
+               Rental Properties in Terre Haute, Indiana
             </p>
         </div>
-        <div class="row" id="portfolio">
-            <div class="col-md-10">
-                <h2>
-                    Portfolio
-                </h2>
-                <a href="https://www.asaawecoach.ca/" target="_blank">
-                    <img src="Images/portfolio/albertalearn.jpg" class="img-thumbnail" title="ASAA We Coach" />
-                </a><a href="http://asaaeligibility.org" target="_blank">
-                    <img src="Images/portfolio/asaaeligibility.jpg" class="img-thumbnail" title="ASAA Eligibility" />
-                </a><a href="http://indiana-homestead.com" target="_blank">
-                    <img src="Images/portfolio/indianaHomestead.jpg" class="img-thumbnail" title="Indiana-Homestead.Com" />
-                </a><a href="http://yourteencourt.org" target="_blank">
-                    <img src="Images/portfolio/yourteencourt.jpg" class="img-thumbnail" title="Your Teen Court" />
-                </a><a href="http://theindianatreeproject.org" target="_blank">
-                    <img src="Images/portfolio/indianatreeproject.jpg" class="img-thumbnail" title="The Indiana Tree Project" />
-                </a><a href="http://indianapolisairport.com" target="_blank">
-                    <img src="Images/portfolio/indyairport.jpg" class="img-thumbnail" title="Indianapolis Airport" />
-                </a><a href="http://motomullets.com" target="_blank">
-                    <img src="Images/portfolio/motomullets.jpg" class="img-thumbnail" title="MotoMullets - Safety First Tail Second" />
-                </a><a href="http://lifeofanathlete.com" target="_blank">
-                    <img src="Images/portfolio/newmexico.jpg" class="img-thumbnail" title="Life Of An Athlete" />
-                </a><a href="http://nfhslearn.com" target="_blank">
-                    <img src="Images/portfolio/nfhslearn.jpg" class="img-thumbnail" title="National Federation of High School Learning Center" />
-                </a><a href="http://nfhsofficials.com" target="_blank">
-                    <img src="Images/portfolio/nfhsofficials.jpg" class="img-thumbnail" title="National Federation of High School Officials Learning Center" />
-                </a><a href="http://sri-taxsale.com" target="_blank">
-                    <img src="Images/portfolio/sri.jpg" class="img-thumbnail" title="SRI Taxsale.Com" />
-                </a><a href="http://ssilearn.org" target="_blank">
-                    <img src="Images/portfolio/ssilearn.jpg" class="img-thumbnail" title="SSI Learn" />
-                </a><a href="http://methodisthealthfoundation.org" target="_blank">
-                    <img src="Images/portfolio/methodist.jpg" class="img-thumbnail" title="Methodist Health Foundation" />
-                </a><a href="http://sportingchancetitleix.com" target="_blank">
-                    <img src="Images/portfolio/title9.jpg" class="img-thumbnail" title="Sporting Chance - The Lasting Legacy of Title IX" />
-                </a><a href="http://goodwincenter.org" target="_blank">
-                    <img src="Images/portfolio/goodwincenter.jpg" title="George T. Goodwin Community Center"
-                         class="img-thumbnail" />
-                </a><a href="http://thelonghomerun.com" target="_blank">
-                    <img src="Images/portfolio/LongHomeRun.jpg" title="The Long Homerun" class="img-thumbnail" />
-                </a>
-                <a href="https://www.iuhealthemployeewellness.org" target="_blank">
-                    <img src="Images/portfolio/iuhealth.jpg" title="Indiana University Health Employee Wellness" class="img-thumbnail" />
-                </a>
-                <a href="http://watchmyfight.com" target="_blank">
-                    <img src="Images/portfolio/watchmyfight.jpg" title="Watch My Fight.Com" class="img-thumbnail" />
-                </a>
-            </div>
-        </div>
         <div class="row">
-            <div class="col-md-10">
-                <h2>
-                    Education
-                </h2>
+            <div class="col-md-12">
                 <p>
-                    Bachelors of Science in Management Information Systems (May, 2006)<br />
-                    Indiana State University, Terre Haute, IN 47809
+                    Coming Soon...
                 </p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-10 table-responsive">
-                <h2>
-                    Certifications
-                </h2>
-                <table class="table table-hover">
-                    <thead>
-                        <tr>
-                            <th>Title</th>
-                            <th>Date Certified</th>
-                        </tr>
-                    </thead>
-                    <tbody id="certifications"></tbody>
-                </table>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-10 table-responsive">
-                <h2>
-                    Technical Skills
-                </h2>
-                <table class="table table-hover">
-                    <thead>
-                        <tr>
-                            <th>Title</th>
-                            <th>Experience</th>
-                            <th>Strength Level</th>
-                        </tr>
-                    </thead>
-                    <tbody id="skills"></tbody>
-                </table>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-10 table-responsive">
-                <h2>
-                    Professional Experience
-                </h2>
-                <h6>* Click For Details</h6>
-                <table class="table table-hover">
-                    <thead>
-                        <tr>
-                            <th>Company</th>
-                            <th>Job Title</th>
-                            <th>Start Date</th>
-                            <th>End Date</th>
-                        </tr>
-                    </thead>
-                    <tbody id="jobs"></tbody>
-                </table>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-10">
-                <h2>Testimonials</h2>
-                <ul id="testimonials" class="list-group"></ul>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-10">
-                <h2>Recent Blogs</h2>
-                <p id="loadingBlogs">-- Loading --</p>
-                <ul id="blogs" class="list-group" style="display: none;">
-                </ul>
             </div>
         </div>
         <hr />
         <footer>
-            <p class="credits">&copy; <span id="currentYear"></span> - Joshua Blackstone, All Rights Reserved</p>
+            <p class="credits">&copy; <span id="currentYear"></span> - <a href="http://joshuablackstone.github.io" target="_blank">Joshua Blackstone</a>, All Rights Reserved</p>
         </footer>
     </div>
 
