Final first Round changes

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GHBRentals : Rental Properties in Terre Haute Indiana</title>
-    <meta name="keywords" content="Terre Haute, Properties, Rental" />
+    <meta name="keywords" content="Properties, Rental, Terre Haute" />
+    <meta name="author" content="Joshua Blackstone" />
+    <meta name="description" content="terre haute apts/housing for rent" />
     <link href="/Content/bootstrap.min.css" rel="stylesheet" />
-    <link href="/Content/toastr.min.css" rel="stylesheet" />
     <link href="/Content/Site.css" rel="stylesheet" />
 </head>
 <body>
@@ -45,6 +46,11 @@
                         <h3 class="panel-title">2025 North 7th Street</h3>
                     </div>
                     <div class="panel-body">
+                        <h5>Contact</h5>
+                        <p>
+                            Call Glenn Blackstone for further information at: <b><a style="display:none" class="mobilePhone" href="tel:1-812-234-0927">812.234.0927</a>
+                            <span class="phone">812.234.0927</span></b>
+                        </p>
                         <h5>Address</h5>
                         <p>
                             2025 North 7th Street<br />
@@ -189,8 +195,7 @@
     </div>
     <script src="/Scripts/jquery-2.0.3.min.js"></script>
     <script src="/Scripts/bootstrap.min.js"></script>
-    <script src="/Scripts/bootbox.min.js"></script>
-    <script src="/Scripts/toastr.min.js"></script>
+    <script src="Scripts/phoneCheck.js"></script>
     <script src="/Scripts/home.js"></script>
 </body>
 </html>
